# Search_and_Rescue_Drone

./: README.md
code/Facial_Detection/: encodings.pickle  facial_recognition.py  facial_recognition_output.py  facial_recognition_output_skipping.py  headshot.py  model_training.py
code/Flight_Controller/: CMakeLists.txt  bar180f.c  bar180f.h  controller.c  controller.h  dronempu.c  dronempu.h  dshot_encoder.cpp  dshot_encoder.h  dshot_pio.pio  flight_core.c  mixer.c  mixer.h  pico_pio_loader.cpp  pid.c  pid.h  test_main.cpp
code/Flight_Controller_Pico2/: CMakeLists.txt  controller.c  controller.h  dronempu.c  dronempu.h  dshot_encoder.cpp  dshot_encoder.pio  flight_core.cpp  mixer.c  mutex_guard.h  pid.c  test_main.cpp  timer.cpp
code/motor_test/: CMakeLists.txt  dshot_motor_test.cpp  pico_pio_loader.h
code/sensor_test/Prev_Example/: CMakeLists.txt  gyro_test.cpp  imu.cpp  imu.h
code/sensor_test/drone_mpu6050/: CMakeLists.txt  dronempu.c
code/sensor_test/newbarometer/: CMakeLists.txt  bar180.c  bar180.h  main.c
schematics/Drone_Wiring/: Drone_Wiring-eagle-import.kicad_sym  Drone_Wiring.kicad_pro  Drone_Wiring.kicad_sch  sym-lib-table
schematics/Drone_Wiring/new/: new.kicad_sch
